roles/longhorn/files/longhorn-ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: longhorn-frontend
  namespace: longhorn-system

spec:
  entryPoints: 
    - web
  routes:
  - match: Host('longhorn.local.lan') 
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 8000
